--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
     background-color: rgb(238, 245, 238);
     font-family:'Times New Roman', Times, serif;
+    
 }
 h2{
     color:rgb(194, 91, 91);
@@ -21,4 +22,12 @@ button{
 }
 button:hover{
     background-color: rgb(216, 146, 146);
+}
+.heading{
+    margin: auto;
+    left: 50%;
+    text-align: center;
+    padding:1px;
+    background-color: rgb(239, 229, 212);
+    border-radius: 8px;
 }
